@@ -49,6 +49,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -60,7 +61,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>gimnasiouq.gimnasiouq/gimnasiouq.gimnasiouq.HelloApplication</mainClass>
+                            <mainClass>gimnasiouq.gimnasiouq/gimnasiouq.gimnasiouq.gimnasiouq.gimnasiouq.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
